# ThereGoesMangoes

./: .bashrc  .gitignore  LICENSE  README.md  ThereGoesMangoes.code-workspace  ThereGoesMangoes.ipynb  pyproject.toml  requirements.txt
.history/: INSTALL WITH CUDA_20230502010118.sh  pyproject_20230502005212.toml  pyproject_20230502005837.toml
data/buffer/: classes.txt  notes.json
data/output/: yolo_mango_detection.json  yolo_mango_detection.yaml
files/wirings/: #auto_saved_files#  _autosave-wirings.kicad_sch  do1.wirings.kicad_sch  do2.wirings.kicad_prl  do2.wirings.kicad_pro  do2.wirings.kicad_sch  do3.wirings.kicad_prl  do3.wirings.kicad_pro  do3.wirings.kicad_sch  final.kicad_sch  final.wirings.kicad_prl  final.wirings.kicad_pro  final.wirings.kicad_sch  sym-lib-table  wirings.kicad_prl  wirings.kicad_pro  wirings.kicad_sch
model/large-640/: events.out.tfevents.1686634208.d5711ce8d6fd.438.3  results.csv
model/medium-640/: events.out.tfevents.1686615339.d5711ce8d6fd.438.0  (+1 more)
model/nano-1024/: args.yaml
there_goes_mangoes/: __util_image_render.py  __util_image_scaler.py  __util_model_tester.py  __util_script_dataset_augment_collage.py  __util_script_dataset_augment_rotflip.py  __util_script_dataset_builder.py  __util_script_dataset_segregator.py  __util_script_validator.py  __util_trainer.py  dummy.py  main.laser.py  main.py  main.usonic.py  perf_test.laser.py  perf_test.proxi.py  perf_test.usonic.py  proto.py  reset copy.py  reset.py  util_camera.py  util_dxsense_usonic.py  util_dxsense_vl53l0x.py  util_proxi_ir.py  util_proxi_ir_tester.py  util_yolo_test.py
(+2864 files in other folders)
