[tool.poetry]
name = "there-goes-mangoes"
version = "0.0"
description = ""
authors = ["SilverousBlack <juliancalebsegundo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "there_goes_mangoes"}]

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.90"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
gpiozero = "^1.6.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
graphviz = "^0.20.1"
pydot = "^1.4.2"

[tool.poetry.group.CPU.dependencies]
torch = "^2.0.0"
torchvision = "^0.15.1"
torchaudio = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
